--- a/mongodb.ipynb
+++ b/mongodb.ipynb
@@ -17504,6 +17504,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['_id', 'url', 'contentS3Link', 'contentType', 'timestamp', 'hash', 'links', 'pagerank'])\n",
+      "text/html; charset=UTF-8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "\n",
+    "myclient = pymongo.MongoClient(\"mongodb+srv://chris:555Project2021@cluster0.kphap.mongodb.net/SearchEngine?retryWrites=true&w=majority\")\n",
+    "mydb = myclient[\"SearchEngine\"]\n",
+    "mycol = mydb[\"documents\"]\n",
+    "mydoc = mycol.find({'url':\"https://en.wikipedia.org:443/wiki/Wikipedia:Contents/Lists\"})\n",
+    "print(mydoc[0].keys())\n",
+    "for x in mydoc:\n",
+    "    print(x['contentType'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Collection' object is not callable. If you meant to call the 'keys' method on a 'Database' object it is failing because no such method exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-e5e31e3112e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmydb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/EMNLP_env/lib/python3.8/site-packages/pymongo/collection.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   3438\u001b[0m         \"\"\"\n\u001b[1;32m   3439\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m\".\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3440\u001b[0;31m             raise TypeError(\"'Collection' object is not callable. If you \"\n\u001b[0m\u001b[1;32m   3441\u001b[0m                             \u001b[0;34m\"meant to call the '%s' method on a 'Database' \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3442\u001b[0m                             \u001b[0;34m\"object it is failing because no such method \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Collection' object is not callable. If you meant to call the 'keys' method on a 'Database' object it is failing because no such method exists."
+     ]
+    }
+   ],
+   "source": [
+    "mydb.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d)\" title=\"EMF (band)\">EMF</a> (<i><a href=\"/wiki/Schubert_Dip\" title=\"Schubert Dip\">Schubert Dip</a\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "\n",
+    "fp = urllib.request.urlopen(\"https://en.wikipedia.org/wiki/Timeline_of_musical_events\")\n",
+    "mybytes = fp.read()\n",
+    "\n",
+    "mystr = mybytes.decode(\"utf8\")\n",
+    "fp.close()\n",
+    "\n",
+    "loc = mystr.find(\"Schubert\")\n",
+    "print(mystr[loc-50:loc+50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4\n",
+    "import urllib.request\n",
+    "url = \"https://en.wikipedia.org/wiki/Timeline_of_musical_events\"\n",
+    "\n",
+    "html = urllib.request.urlopen(url).read()\n",
+    "\n",
+    "soup = bs4.BeautifulSoup(html)\n",
+    "\n",
+    "\n",
+    "for script in soup([\"script\", \"style\"]):\n",
+    "\n",
+    "    script.decompose()\n",
+    "\n",
+    "\n",
+    "\n",
+    "strips = list(soup.stripped_strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Timeline of musical events - Wikipedia'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.title.string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r ( Leisure ) Cypress Hill ( Cypress Hill ) EMF ( Schubert Dip ) The Infectious Grooves ( The Plague\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystr = ' '.join(strips)\n",
+    "loc = mystr.find(\"Schubert\")\n",
+    "print(mystr[loc-50:loc+50])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
