--- a/mongodb.ipynb
+++ b/mongodb.ipynb
@@ -40,6 +40,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "myclient = pymongo.MongoClient(\"mongodb+srv://chris:555Project2021@cluster0.kphap.mongodb.net/SearchEngine?retryWrites=true&w=majority\")\n",
+    "mydb = myclient[\"SearchEngine\"]\n",
+    "mycol = mydb[\"indexes_final\"]\n",
+    "documents = mydb['documentsFull']\n",
+    "mydoc = mycol.find({'lemma' : { \"$not\": {\"$regex\" : \".* .*\"} }})\n",
+    "lexicon = {}\n",
+    "URL_WTD = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0018773172218648903\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in documents.find({'url': \"https://www.treccani.it:443/enciclopedia/berlino_%28Enciclopedia-Italiana%29/\"}):\n",
+    "    print(x['pagerank'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
